attempt to make Auth header work
