# back/api/auth.go
@@ -12,27 +12,29 @@ import (
 
 
 func (s *Server) handleLogin(rw http.ResponseWriter, r *http.Request) {
-	err := r.ParseForm()
+	type authInfo struct {
+		Email string
+		Password string
+	}
+	auth, err := readAndUnmarshalBody[authInfo](r)
 	if err != nil {
 		writers.WriteError(rw, err)
 		return
 	}
-	email := r.Form.Get("email")
-	if email == "" {
+	if auth.Email == "" {
 		writers.WriteError(rw, NewErrorWithStatus(http.StatusBadRequest, "email field is absent"))
 		return
 	}
-	password := r.Form.Get("password")
-	if password == "" {
+	if auth.Password == "" {
 		writers.WriteError(rw, NewErrorWithStatus(http.StatusBadRequest, "password is absent"))
 	}
 
-	user, err := s.queries.FindUserByEmail(r.Context(), email)
+	user, err := s.queries.FindUserByEmail(r.Context(), auth.Email)
 	if err != nil {
 		writers.WriteError(rw, err)
 		return
 	}
-	err = internal.CheckPasswordHash(password, user.PasswordHash)
+	err = internal.CheckPasswordHash(auth.Password, user.PasswordHash)
 	if err != nil {
 		writers.WriteError(rw, err)
 		return
@@ -48,7 +50,12 @@ func (s *Server) handleLogin(rw http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	writers.WriteJSON(rw, session)
+	loginResult := models.LoginResult{
+		SessionID: session.ID.String(),
+		Expires: session.DateExpires.Time.Format(time.RFC3339),
+	}
+
+	writers.WriteJSON(rw, loginResult)
 }
 
 func (s *Server) handleRegister(rw http.ResponseWriter, r *http.Request) {
