# back/api/models/login_result.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// LoginResult login result
+//
+// swagger:model LoginResult
+type LoginResult struct {
+
+	// Expiration date in the RFC3339 format
+	Expires string `json:"expires,omitempty"`
+
+	// session Id
+	SessionID string `json:"sessionId,omitempty"`
+}
+
+// Validate validates this login result
+func (m *LoginResult) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this login result based on context it is used
+func (m *LoginResult) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *LoginResult) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *LoginResult) UnmarshalBinary(b []byte) error {
+	var res LoginResult
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
